--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ Flask-Principal==0.4.0
 Flask-RESTful==0.2.12
 Flask-SQLAlchemy==2.0
 Flask-Security==1.7.4
+Flask-Testing==0.4.2
 Flask-WTF==0.10.2
 Flask-WhooshAlchemy==0.56
 Jinja2==2.7.3
 MarkupSafe==0.23
 SQLAlchemy==0.9.8
+Twisted==14.0.2
 WTForms==2.0.1
 Werkzeug==0.9.6
 Whoosh==2.6.0
@@ -18,7 +20,9 @@ aniso8601==0.83
 blinker==1.3
 itsdangerous==0.24
 passlib==1.6.2
+py-bcrypt==0.4
 pytz==2014.7
 requests==2.4.3
 six==1.8.0
 stripe==1.19.1
+zope.interface==4.1.1
