--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-WTF==0.10.2
 Flask-WhooshAlchemy==0.56
 Jinja2==2.7.3
 MarkupSafe==0.23
+Pint==0.6
 SQLAlchemy==0.9.8
 WTForms==2.0.1
 Werkzeug==0.9.6
@@ -20,6 +21,7 @@ aniso8601==0.83
 blinker==1.3
 itsdangerous==0.24
 passlib==1.6.2
+psycopg2==2.5.4
 py-bcrypt==0.4
 pytz==2014.7
 requests==2.4.3
