--- a/requirements.txt
+++ b/requirements.txt
@@ -9,22 +9,25 @@ Flask-SQLAlchemy==2.0
 Flask-Security==1.7.4
 Flask-Testing==0.4.2
 Flask-WTF==0.10.2
-Flask-WhooshAlchemy==0.56
 Jinja2==2.7.3
 MarkupSafe==0.23
 Pint==0.6
 SQLAlchemy==0.9.8
+SQLAlchemy-Searchable==0.7.0
+SQLAlchemy-Utils==0.28.2
 WTForms==2.0.1
 Werkzeug==0.9.6
-Whoosh==2.6.0
 aniso8601==0.83
 blinker==1.3
+decorator==3.4.0
 itsdangerous==0.24
 passlib==1.6.2
 psycopg2==2.5.4
 py-bcrypt==0.4
+pyparsing==2.0.3
 pytz==2014.7
 requests==2.4.3
 six==1.8.0
 stripe==1.19.1
+validators==0.7
 zope.interface==4.1.1
